--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
+    "name": "nexus/firstpsr4plugin",
+    "description": "A short description of what your package does",
+    "require": {
+        "php": ">=5.3.0"
+    }
 	"autoload": {
 		"psr-4":{
 			"nexus\\":"src"		
 		}
 	}
-
 }
